@@ -3,6 +3,6 @@
 #ifndef kmversion_h
 #define kmversion_h
 
-#define KMAIL_VERSION "1.0.16"
+#define KMAIL_VERSION "1.0.17"
 
 #endif /*kmversion_h*/
